log/build_2024-12-01_22-37-09/turtle_demo_controller/stderr.log
  File "/home/thedush/ROS2_turtlesim_PID_demo/install/turtle_demo_controller/lib/python3.10/site-packages/turtle_demo_controller/turtle_controller.py", line 124
    def my_velocity_cont(self.l_v, self.a_v):
                             ^
SyntaxError: invalid syntax

